fix: radius card overflow

--- a/components/canvas/Card/Card.css
+++ b/components/canvas/Card/Card.css
@@ -16,6 +16,7 @@ diamond-card {
 
   &[radius] {
     border-radius: var(--diamond-radius);
+    overflow: hidden;
   }
 
   &[padding='xs'] {
